# storage/api-docs/api-docs.json
@@ -10,7 +10,7 @@
     },
     "servers": [
         {
-            "url": "https://leverpay-api.azurewebsites.net",
+            "url": "http://my-default-host.com",
             "description": "Test server"
         }
     ],
@@ -3570,7 +3570,8 @@
                                     "password",
                                     "first_name",
                                     "last_name",
-                                    "phone"
+                                    "phone",
+                                    "bvn"
                                 ],
                                 "properties": {
                                     "first_name": {
@@ -3583,6 +3584,9 @@
                                         "type": "string"
                                     },
                                     "gender": {
+                                        "type": "string"
+                                    },
+                                    "bvn": {
                                         "type": "string"
                                     },
                                     "dob": {
@@ -5140,9 +5144,9 @@
                 "scheme": "https",
                 "flows": {
                     "password": {
-                        "authorizationUrl": "https://leverpay-api.azurewebsites.net/oauth/authorize",
-                        "tokenUrl": "https://leverpay-api.azurewebsites.net/oauth/token",
-                        "refreshUrl": "https://leverpay-api.azurewebsites.net/token/refresh",
+                        "authorizationUrl": "http://localhost/oauth/authorize",
+                        "tokenUrl": "http://localhost/oauth/token",
+                        "refreshUrl": "http://localhost/token/refresh",
                         "scopes": []
                     }
                 }
